--- a/static/403.html
+++ b/static/403.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>403 Fobiten - Bogdan&#39;s website</title>
+    <title>403 Forbidden</title>
     <meta name="description" content="">
     <meta property="og:title" content="403 Page not found" />
     <meta property="og:description" content="Bogdan&#39;s " />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ubogdan.com/403.html" />
+    <meta http-equiv="refresh" content="10;https://www.google.com/search?q=rusia+global+sanctions" />
 
     <script type="application/javascript">
         var doNotTrack = false;
@@ -26,6 +27,6 @@
 <body class="body">
 </body>
     <h1>403 Forbidden</h1>
-    <h3>It will help if you learn to respect other countries. Until then you are not welcome.</h3>
+    <h3>This is one of the consequences of attacking or mutually supporting Russia's war against Ukraine.</h3>
 </body>
 </html>
